--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,9 @@ ul#deck{
 
   box-shadow: 5px 2px 20px 0 rgba(46, 61, 73, 0.5);
   background: #2e3d49;
-  color: #2e3d49; 
+  
+  font-size: 2em;
+  color: #02ccba;
 
   border-radius: 5px;
   margin: 5px 2px;
