--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ ul#deck{
   width: 100%;
   height: 100%;
 
-  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 100%);
+  background: linear-gradient(160deg, #02ccba 0%, #aa7ecd 60%);
   box-shadow: 12px 15px 20px 0 rgba(46, 61, 73, 0.5);
   border-radius: 5px;
 
@@ -147,7 +147,8 @@ ul#deck{
 }
 
 .card-right{
-  background-color: rgb(16, 192, 69);
+  background-color: rgb(8, 105, 53);
+  color: white;
 }
 
 .card-wrong{
