--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,86 @@ body {
 
   align-items: center;
   justify-content: center;
+
+  border: 2px solid red;
+
+  position: relative;
+}
+
+/* style for modal and its children */
+#modal{
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  /* visibility: hidden; */
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
+#modal-content{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  padding: 3px;
+  width: 90%;
+
+  background-color: #94a9c3;
+  border-radius: 5px;
+
+  font-size: 1.5em;
+
+  /* flex-container part */
+  display: flex;
+  flex-flow: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+
+}
+
+#modal-content-message{
+  text-align: center;
+
+  margin: 10px auto;
+}
+
+#modal-content-btn-container{
+  margin: 10px auto;
+}
+
+.modal-content-btn{
+
+  display: inline-block;
+  text-align: center;
+
+  border-radius: 5px;
+  min-width: 80px;
+
+  padding: 2px 5px;
+
+  text-transform: uppercase;
+  font-size: 0.9em;
+  letter-spacing: 1px;
+  font-weight: 100;
+}
+
+#no-btn{
+  background-color: rgba(255, 0, 0, 0.7);
+}
+
+#no-btn:hover, #no-btn:active, #no-btn:focus{
+  background-color: rgba(255, 0, 0, 1);
+}
+
+#yes-btn{
+  background-color: rgb(15, 195, 75, 0.7);
+}
+
+#yes-btn:hover, #yes-btn:active, #yes-btn:focus{
+  background-color: rgb(15, 195, 75, 1);
 }
 
 /* style for header and its children */
