--- a/css/style.css
+++ b/css/style.css
@@ -29,20 +29,30 @@ body {
   align-items: center;
   justify-content: center;
 
-  border: 2px solid red;
+  /* border: 2px solid red; */
+  /* background-color: rgb(214, 224, 221); */
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px;
 
   position: relative;
 }
 
 /* style for modal and its children */
 #modal{
+  z-index: 1;
+
   position: absolute;
   left: 0px;
   top: 0px;
   width: 100%;
   height: 100%;
-  /* visibility: hidden; */
+  visibility: hidden;
   background-color: rgba(255, 255, 255, 0.6);
+}
+
+.modal-show{
+  visibility: visible !important;
 }
 
 #modal-content{
@@ -92,6 +102,8 @@ body {
   font-size: 0.9em;
   letter-spacing: 1px;
   font-weight: 100;
+
+  cursor: pointer;
 }
 
 #no-btn{
@@ -169,8 +181,14 @@ section#controls {
 }
 
 #restart {
-  color: green;
+  color: rgb(15, 195, 75, 0.7);
   font-size: 1.5em;
+
+  cursor: pointer;
+}
+
+#restart:focus, #restart:active, #restart:hover{
+  color: rgb(15, 195, 75, 1);
 }
 
 /* style for section#deck-container and its children */
