--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html {
   height: 100%;
   padding: 2px;
 
-  min-width: 300px;
+  min-width: 150px;
   max-width: 600px;
 
   /* border: 2px solid red; */
@@ -329,4 +329,71 @@ ul#deck {
     min-height: 110px;
     min-width: 110px;
   } 
+}
+
+@media (min-width: 200px) and (max-width: 350px){
+  .card{
+    min-height: 40px;
+    min-width: 30px;
+  }
+
+  .card{
+    font-size: 1em;
+  }
+
+  h1{
+    font-size: 1.3em;
+  }
+
+  #timer-container, #moves, .star{
+    font-size: 1em;
+  }
+
+  #modal-content{
+    font-size: 1em;
+  }
+
+}
+
+@media (max-width: 210px){
+  .card{
+    min-height: 30px;
+    min-width: 30px;
+  }
+
+  h1{
+    font-size: 1.2em;
+  }
+
+  #controls{
+    flex-flow: column !important;
+  }
+
+  #timer-container, #moves, .star{
+    font-size: 1em;
+  }
+
+  #modal-content{
+    font-size: 0.8em;
+  }
+
+  .modal-content-btn{
+    min-width: 40px;
+  }
+
+  #timer-container{
+    order: -4;
+  }
+
+  #rating{
+
+  }
+  
+  #moves{
+    order: -3; 
+  }
+
+  #restart{
+
+  }
 }
